[package]
name = "chiquito"
version = "0.1.0"
authors = ["Lorenzo Carbonell <lorenzo.carbonell.cerezo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rusqlite]
version = "0.24.2"
features = ["bundled"]

[dependencies]
confy = "0.4.0"
dirs = "3.0"
log = "0.4.14"
syslog = "5.0.0"
serde_derive = "1.0.124"
serde = "1.0.124"
